# kanban-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  python.py  requirements.txt  test_auth.py  test_columns.py  test_deadline.py  test_security_service.py  test_superuser.py  test_timezone.py
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 1123b5d02485_new_tables.py  1d9ab05718e2_setup_tables.py  53de6e6346a2_add_completed_field_to_cards.py  6e2c703032c1_new_logic.py  95bd95d59400_deadlines_and_assign_to_card.py  9c6cf356508b_setup_tables.py  9d97c6fac45e_initial_migration.py  e7b51b80bd85_deadlines_and_assign_to_card.py
src/api/dependencies/: auth.py  permissions.py
src/api/v1/: __init__.py  auth.py  board_permissions.py  boards.py  cards.py  columns.py  comments.py  tags.py  users.py  websockets.py
src/core/: __init__.py  config.py  middleware.py
src/db/: __init__.py  base.py  database.py  models.py
src/logs/: __init__.py  debug_log.py  server_log.py
src/models/: __init__.py  board.py  card.py  column.py  log.py  notification.py  statistic.py  tag.py  user.py  user_statistic.py
src/schemas/: __init__.py  auth.py  board.py  board_permissions.py  card.py  column.py  comment.py  tag.py  user_statistic.py  websocket.py
src/services/: __init__.py  board_service.py  card_service.py  column_service.py  comment_service.py  security_service.py  statistic_service.py  tag_service.py  user_service.py  user_statistic_service.py  websocket_service.py
